Update dependencies and configurations - Update package.json with new dependency hashes - Modify ESLint config to disable prefer-standalone rule - Remove standalone property from root component - Simplify author-books template and remove MAX_BOOKS_PER_AUTHOR constant - Rename CSS variables in _vars.scss and update grid layout in library component

--- a/apps/site/src/app/core/styles/_vars.scss
+++ b/apps/site/src/app/core/styles/_vars.scss
@@ -4,9 +4,8 @@ $default-padding: 1rem;
 $default-border-width: 1px;
 // - Geometry
 $default-border-radius: 10px;
-$card-size: 250px;
+$card-width: 250px;
 $card-header-height: 50px;
-$card-content-height: $card-size - $card-header-height;
 $main-menu-width: 12rem;
 $header-height: 3.5rem;
 // == Colors ==
