Switching from Jasmine to Jest for mocking dependencies Updating test setup with zoneless change detection Modernizing the testing framework configuration

--- a/apps/site/src/app/modules/player/components/book-canvas/book-canvas.component.html
+++ b/apps/site/src/app/modules/player/components/book-canvas/book-canvas.component.html
@@ -18,6 +18,7 @@
       <img
         *ngIf="bookData.bookTitlePicture"
         [src]="bookData.bookTitlePicture"
+        (error)="removeImage($event)"
         alt="Обложка книги"
       />
     </section>
