Added NX books crawler project. Created new Book() class. Refactored utils library and Book usage types

--- a/apps/site/src/app/modules/player/components/book-canvas/book-canvas.component.html
+++ b/apps/site/src/app/modules/player/components/book-canvas/book-canvas.component.html
@@ -10,14 +10,14 @@
     cdkVirtualScrollingElement
   >
     <h1>
-      {{ bookData.author.first }} {{ bookData.author.last }} -
-      {{ bookData.bookTitle }}
+      {{ bookData.author.firstName }} {{ bookData.author.lastName }} -
+      {{ bookData.name }}
     </h1>
 
     <section class="title-picture-container">
       <img
-        *ngIf="bookData.bookTitlePicture"
-        [src]="bookData.bookTitlePicture"
+        *ngIf="bookData.cover"
+        [src]="bookData.cover.toBase64String()"
         (error)="removeImage($event)"
         alt="Обложка книги"
       />
