Make use of utils fb2-parser in site and books crawler. New html parser. Debugging and fixes.

--- a/apps/site/src/app/modules/player/components/book-canvas/book-canvas.component.html
+++ b/apps/site/src/app/modules/player/components/book-canvas/book-canvas.component.html
@@ -10,7 +10,8 @@
     cdkVirtualScrollingElement
   >
     <h1>
-      {{ bookData.author.firstName }} {{ bookData.author.lastName }} -
+      {{ bookData.author.firstName }} {{ bookData.author.middleName }}
+      {{ bookData.author.lastName }} -
       {{ bookData.name }}
     </h1>
 
