--- a/apps/site/src/app/shared/components/main-menu/main-menu.component.html
+++ b/apps/site/src/app/shared/components/main-menu/main-menu.component.html
@@ -10,7 +10,7 @@
     [accept]="'.fb2'"
     ><mat-icon>upload</mat-icon>Загрузить
   </a>
-  @if (openedBookService.book()) {
+  @if (activeBookService.book() !== null) {
   <a mat-list-item routerLink="/player" routerLinkActive="active">
     <mat-icon>play_arrow</mat-icon>Плеер
   </a>
