Fixes for scrolling, mobile view. Files structure refactoring, fixes.

--- a/apps/site/src/app/core/components/main/main.component.html
+++ b/apps/site/src/app/core/components/main/main.component.html
@@ -11,7 +11,7 @@
     "
   ></mat-progress-bar>
   <mat-sidenav-container>
-    <mat-sidenav #sidenav mode="side" opened="true" (click)="sidenav.close()">
+    <mat-sidenav #sidenav mode="side" opened="true">
       <main-menu></main-menu>
       <copyright-owner></copyright-owner>
       <copyright></copyright>
