--- a/apps/site/src/app/core/styles/main.scss
+++ b/apps/site/src/app/core/styles/main.scss
@@ -9,8 +9,6 @@ body {
   margin: 0;
   width: 100%;
   height: 100%;
-  min-width: 530px;
-  min-height: 100vh;
 }
 
 html {
@@ -26,6 +24,11 @@ html {
 
   button {
     height: 36px !important;
+  }
+
+  body {
+    height: 100vh; /* Use vh as a fallback for browsers that do not support Custom Properties */
+    height: calc(var(--vh, 1vh) * 100);
   }
 }
 
