--- a/apps/site/src/app/modules/main-header/main-header.component.html
+++ b/apps/site/src/app/modules/main-header/main-header.component.html
@@ -4,7 +4,7 @@
     extended
     color="success"
     class="menu"
-    matTooltip="Показать главное меню"
+    matTooltip="Показать/спрятать главное меню"
     matTooltipPosition="below"
     matTooltipShowDelay="1500"
     (click)="menuClick.emit()"
