Add book title component, small fixes

--- a/apps/site/src/app/core/components/main/main.component.html
+++ b/apps/site/src/app/core/components/main/main.component.html
@@ -1,6 +1,7 @@
 <ng-container>
   <mat-toolbar>
     <main-header (menuClick)="sidenav.toggle()"></main-header>
+    <book-title></book-title>
   </mat-toolbar>
   <mat-progress-bar
     mode="indeterminate"
