Added infinite scrolling for authors

--- a/apps/site/src/app/core/components/main/main.component.scss
+++ b/apps/site/src/app/core/components/main/main.component.scss
@@ -34,5 +34,9 @@
       padding: $default-padding;
       width: $main-menu-width;
     }
+
+    mat-sidenav-content {
+      overflow: unset !important;
+    }
   }
 }
