--- a/apps/site/src/app/core/styles/_vars.scss
+++ b/apps/site/src/app/core/styles/_vars.scss
@@ -6,7 +6,9 @@ $default-border-width: 1px;
 $default-border-radius: 10px;
 $card-width: 250px;
 $card-header-height: 50px;
+$body-min-width: 530px;
 $main-menu-width: 12rem;
+$main-content-min-width: calc($body-min-width - $main-menu-width);
 $header-height: 3.5rem;
 // == Colors ==
 $default-color: rgb(250 250 250 / 90%);
