--- a/apps/site/src/app/core/styles/main.scss
+++ b/apps/site/src/app/core/styles/main.scss
@@ -27,6 +27,8 @@ html {
   }
 
   body {
+    min-width: $body-min-width;
+    overflow: hidden;
     height: 100vh; /* Use vh as a fallback for browsers that do not support Custom Properties */
     height: calc(var(--vh, 1vh) * 100);
   }
