Refactor: Improve UI and Audio API Handling This commit refactors the UI to improve readability and user experience. Key Changes: Simplified Author Display: Replaced the nested fieldset with a more concise mat-accordion component for displaying random authors, enhancing visual clarity. Streamlined Audio Generation: Updated the TTS API service to utilize shareReplay for efficient audio blob handling and removed unnecessary subscriptions. Loading State Management: Added loading state management to the main component, dynamically adding/removing a "loading" class to the body based on the application's state. Additional Improvements: Minor styling adjustments in book-canvas.component.scss for better visual feedback during loading.

--- a/apps/site/src/app/modules/player/components/book-canvas/book-canvas.component.scss
+++ b/apps/site/src/app/modules/player/components/book-canvas/book-canvas.component.scss
@@ -47,7 +47,25 @@ div {
 
         &:before {
           margin-left: -$default-padding;
-          content: '\21e8';
+        }
+      }
+    }
+  }
+}
+
+::ng-deep body {
+  book-canvas {
+    p.active {
+      &:before {
+        content: '▶️';
+      }
+    }
+  }
+  &.loading {
+    book-canvas {
+      p.active {
+        &:before {
+          content: '⌛';
         }
       }
     }
