--- a/apps/site/src/app/modules/welcome/components/welcome.component.html
+++ b/apps/site/src/app/modules/welcome/components/welcome.component.html
@@ -1,26 +1,23 @@
 <div class="welcome-container">
-  <h1>Добро пожаловать на сайт Book-play.ru!</h1>
-  <p><br /></p>
+  <section>
+    <p>
+      <b>BOOK-PLAY.RU</b> - платформа для прослушивания книг, озвученных
+      нейросетью.
+    </p>
 
-  <fieldset>
-    <legend>Бесплатно проигрывать электронные книги</legend>
-    Здесь вы можете бесплатно и без регистрации
-    <b>проигрывать электронные книги в формате .fb2</b><br />
-    Просто <a (click)="runFileUpload()" href="javascript:">загрузите книгу</a> в
-    формате .fb2 используя главное меню.
-  </fieldset>
+    <p>
+      Удобный сервис для тех, кто ценит время: выбирайте книги и слушайте их в
+      автоматическом исполнении.
+    </p>
+    <p>Наслаждайтесь любимыми произведениями в любом месте!</p>
+  </section>
 
-  <p><br /></p>
-  <fieldset>
-    <legend>Библиотека бесплатных книг</legend>
-    Воспользуйтесь <a href="/library">библиотекой бесплатных книг</a> (не
-    подлежайщих лицензированию) чтобы прослушать примеры озвучки.
-  </fieldset>
+  <p>&nbsp;</p>
+  <h2>3 случайных авторов дня:</h2>
 
-  <p><br /></p>
-  <fieldset>
-    <legend>Генерация голосовых аудио файлов</legend>
-    Также, вы можете использовать сайт для бесплатной генерации голосовых аудио
-    файлов, используя <a href="/voice">форму озвучки проивольного текста</a>.
-  </fieldset>
+  <mat-accordion>
+    @for (author of authors.value(); track author.fullName) {
+    <author-books [author]="author"></author-books>
+    }
+  </mat-accordion>
 </div>
