--- a/apps/site/src/app/core/components/main/main.component.scss
+++ b/apps/site/src/app/core/components/main/main.component.scss
@@ -15,6 +15,7 @@
 
     main-header {
       flex: 0 0;
+      padding-right: 0;
     }
 
     book-title {
@@ -22,6 +23,7 @@
       overflow: hidden;
       white-space: nowrap;
       text-overflow: ellipsis;
+      padding-left: 0;
     }
   }
 
