--- a/apps/site/src/app/modules/welcome/components/welcome.component.scss
+++ b/apps/site/src/app/modules/welcome/components/welcome.component.scss
@@ -13,7 +13,7 @@
 
   author-books {
     display: block;
-    width: $card-width * 2;
+    max-width: $card-width * 2;
     margin: $default-padding 0;
   }
 }
