Added book component and 3 random books of a day

--- a/apps/site/src/app/modules/player/components/book-canvas/book-canvas.component.html
+++ b/apps/site/src/app/modules/player/components/book-canvas/book-canvas.component.html
@@ -4,9 +4,9 @@
     <h1>{{ bookData.fullName }}</h1>
     <section class="title-picture-container">
       <img
-        *ngIf="bookData.cover"
-        [src]="bookData.cover.toBase64String()"
-        (error)="removeImage($event)"
+        [src]="coverSrc()"
+        [width]="COVER_IMG_WIDTH"
+        [height]="COVER_IMG_HEIGHT"
         alt="Обложка книги"
       />
     </section>
