--- a/apps/site/src/app/core/styles/main.scss
+++ b/apps/site/src/app/core/styles/main.scss
@@ -30,6 +30,7 @@ html {
     min-width: $body-min-width;
     height: 100vh; /* Use vh as a fallback for browsers that do not support Custom Properties */
     height: calc(var(--vh, 1vh) * 100);
+    overflow: hidden;
   }
 }
 
