--- a/apps/site/src/app/modules/book/components/book/book.component.scss
+++ b/apps/site/src/app/modules/book/components/book/book.component.scss
@@ -11,10 +11,30 @@
     display: flex;
     flex-direction: column;
     gap: $default-padding;
-    text-align: justify;
+
+    h1,
+    h2,
+    h3,
+    h4 {
+      margin: 0;
+    }
 
     button {
       border-radius: $default-border-radius;
+    }
+
+    .annotation {
+      text-align: justify;
+    }
+
+    ::ng-deep mat-chip-set > div {
+      align-items: center;
+      row-gap: $default-padding;
+      column-gap: calc($default-padding / 2);
+    }
+
+    .date {
+      padding: calc($default-padding / 2);
     }
   }
 }
