Proper support of language detection in crawler. Fix for book loading player.component and related entities

--- a/apps/site/src/app/modules/main-menu/main-menu.component.html
+++ b/apps/site/src/app/modules/main-menu/main-menu.component.html
@@ -10,7 +10,7 @@
     [accept]="'.fb2'"
     ><mat-icon>upload</mat-icon>Загрузить
   </a>
-  @if (activeBookService.book() !== null) {
+  @if (activeBookPresent() | async) {
   <a mat-list-item routerLink="/player" routerLinkActive="active">
     <mat-icon>play_arrow</mat-icon>Плеер
   </a>
