Make support of images. Update in library utils

--- a/apps/site/src/app/core/styles/_vars.scss
+++ b/apps/site/src/app/core/styles/_vars.scss
@@ -1,6 +1,9 @@
+@use 'mixins' as *;
+
 // == Sizes ==
 // - Paddings
 $default-padding: 1rem;
+$default-padding-px: toPx(1);
 $default-border-width: 1px;
 // - Geometry
 $default-border-radius: 10px;
