New books API with authorId DB structure support. New db-tune-utils app.

--- a/apps/site/src/app/modules/book/components/book/book.component.html
+++ b/apps/site/src/app/modules/book/components/book/book.component.html
@@ -7,7 +7,7 @@
     alt="Обложка книги"
   />
   <div class="content">
-    <h4>{{ book.author.fullName }}</h4>
+    <h4>{{ book.author.full }}</h4>
     <h2>{{ book.name }}</h2>
 
     <mat-chip-set aria-label="Жанры">
