--- a/apps/site/src/app/core/styles/_vars.scss
+++ b/apps/site/src/app/core/styles/_vars.scss
@@ -15,6 +15,7 @@ $main-content-min-width: calc(100vw - $main-menu-width);
 $header-height: 3.5rem;
 // == Colors ==
 $default-color: rgb(250 250 250 / 90%);
+$default-color-dark: rgb(0 0 0);
 $default-highlight-color: rgb(200 200 200 / 25%);
 // == Etc ==
 $default-border: $default-border-width solid $default-highlight-color;
