--- a/apps/site/src/app/modules/welcome/components/welcome.component.scss
+++ b/apps/site/src/app/modules/welcome/components/welcome.component.scss
@@ -12,10 +12,16 @@
     }
   }
 
-  author-books {
-    display: block;
-    max-width: $card-width * 2;
-    margin: $default-padding 0;
+  ::ng-deep mat-chip {
+    a {
+      text-decoration: none;
+      color: $default-color;
+      font-weight: normal;
+      padding: 0 $default-padding;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+    }
   }
 
   book {
