Added search author by genres and related substances

--- a/apps/site/src/app/modules/author/components/author/author.component.scss
+++ b/apps/site/src/app/modules/author/components/author/author.component.scss
@@ -20,6 +20,12 @@
     .content {
       display: block;
 
+      ::ng-deep mat-chip-set a {
+        font-weight: normal;
+        text-decoration: none;
+        color: $default-color;
+      }
+
       .annotation {
         display: inline-block;
         text-align: justify;
