--- a/apps/site/src/app/modules/author/components/author/author.component.html
+++ b/apps/site/src/app/modules/author/components/author/author.component.html
@@ -7,7 +7,9 @@
 
     <mat-chip-set aria-label="Жанры">
       @for (genre of author.genres; track genre) {
-      <mat-chip *ngIf="FB2_GENRES[genre]">{{ FB2_GENRES[genre] }}</mat-chip>
+      <mat-chip *ngIf="genre"
+        ><a [href]="'/author/genre/' + genre">{{ genre | genre }}</a></mat-chip
+      >
       }
     </mat-chip-set>
 
