--- a/apps/site/src/app/modules/authors-by-genre/components/authors-by-genre/authors-by-genre.component.scss
+++ b/apps/site/src/app/modules/authors-by-genre/components/authors-by-genre/authors-by-genre.component.scss
@@ -14,22 +14,14 @@
 
     h1 {
       display: flex;
-      flex: 0 0;
+      width: 100%;
       gap: 0;
-
-      span:first-of-type {
-        flex: 0;
-      }
 
       input {
         height: 100%;
         max-width: 400px;
         margin-left: $default-padding;
         flex: 1;
-      }
-
-      span:last-of-type {
-        flex: 0;
       }
     }
 
