--- a/apps/site/src/app/modules/book/components/book/book.component.scss
+++ b/apps/site/src/app/modules/book/components/book/book.component.scss
@@ -24,6 +24,12 @@
     .content {
       display: block;
 
+      h4 {
+        a:hover {
+          text-decoration: underline;
+        }
+      }
+
       button {
         border-radius: $default-border-radius;
       }
@@ -32,10 +38,6 @@
         color: $default-color;
         text-decoration: none;
         font-weight: normal;
-
-        &:hover {
-          text-decoration: underline;
-        }
       }
 
       .annotation {
