Added first settings implementation

--- a/apps/site/src/app/shared/components/main-menu/main-menu.component.html
+++ b/apps/site/src/app/shared/components/main-menu/main-menu.component.html
@@ -1,5 +1,5 @@
 <mat-nav-list>
-  <a mat-list-item routerLink="/welcome">
+  <a mat-list-item [routerLink]="['welcome']">
     <mat-icon>home</mat-icon>
     Главная
   </a>
@@ -11,16 +11,20 @@
     ><mat-icon>upload</mat-icon>Загрузить
   </a>
   @if (activeBookPresent() | async) {
-  <a mat-list-item routerLink="/player" routerLinkActive="active">
+  <a mat-list-item [routerLink]="['player']" routerLinkActive="active">
     <mat-icon>play_arrow</mat-icon>Плеер
   </a>
   }
-  <a mat-list-item routerLink="/library">
+  <a mat-list-item [routerLink]="['library']">
     <mat-icon>menu_book</mat-icon>
     Книги
   </a>
-  <a mat-list-item routerLink="/voice">
+  <a mat-list-item [routerLink]="['voice']">
     <mat-icon>volume_up</mat-icon>
     Озвучить
+  </a>
+  <a mat-list-item [routerLink]="['settings']">
+    <mat-icon>settings</mat-icon>
+    Настройки
   </a>
 </mat-nav-list>
