--- a/apps/site/src/app/modules/settings/components/settings/settings.component.html
+++ b/apps/site/src/app/modules/settings/components/settings/settings.component.html
@@ -12,8 +12,8 @@
     <div>
       <select formControlName="rate">
         <option [value]="'-10'">Медленно</option>
-        <option [value]="'+1'">Нормально</option>
-        <option [value]="'+10'">Быстро</option>
+        <option [value]="'1'">Нормально</option>
+        <option [value]="'10'">Быстро</option>
       </select>
     </div>
     <span>Тональность</span>
@@ -21,7 +21,7 @@
       <select formControlName="pitch">
         <option [value]="'-10'">Низкая</option>
         <option [value]="'-1'">Нормальная</option>
-        <option [value]="'+10'">Высокая</option>
+        <option [value]="'10'">Высокая</option>
       </select>
     </div>
     <span>
