Fixes for routerLInk. Links for author and books in title. New genre pipe and const implementation.

--- a/apps/site/src/app/modules/authors-by-genre/components/authors-by-genre/authors-by-genre.component.html
+++ b/apps/site/src/app/modules/authors-by-genre/components/authors-by-genre/authors-by-genre.component.html
@@ -21,7 +21,7 @@
         <nav *liVirtualItem="let item">
           <mat-chip
             ><a
-              [href]="'author/' + item.id"
+              [routerLink]="['/author', item.id]"
               [title]="'Пишет в жарах: ' + (item.genres | genres)"
               >{{ item.full }}</a
             ></mat-chip
