--- a/apps/site/src/app/modules/author/components/author/author.component.html
+++ b/apps/site/src/app/modules/author/components/author/author.component.html
@@ -8,7 +8,9 @@
     <mat-chip-set aria-label="Жанры">
       @for (genre of author.genres; track genre) {
       <mat-chip *ngIf="genre"
-        ><a [href]="'/author/genre/' + genre">{{ genre | genre }}</a></mat-chip
+        ><a [routerLink]="['/author/genre', genre]">{{
+          genre | genre
+        }}</a></mat-chip
       >
       }
     </mat-chip-set>
@@ -19,7 +21,7 @@
       <h4>Произведения:</h4>
       @for (book of author.books; track book.name) {
       <div>
-        <a [href]="'book/' + book.id">{{ book.name }}</a>
+        <a [routerLink]="['/book', book.id]">{{ book.name }}</a>
       </div>
       }
     </div>
